--- a/CSS/components/nav-bar.css
+++ b/CSS/components/nav-bar.css
@@ -29,7 +29,7 @@
   display : flex;
   justify-content: center;
   align-items: center;
-  color : white;
+  color : peachpuff;
   font-weight : 600;
   position : absolute;
   left : 15px;
