--- a/css/components/nav-bar.css
+++ b/css/components/nav-bar.css
@@ -1,5 +1,5 @@
 .nav {
-  background-color: #f9f9fa;
+  background-color: peachpuff;
   padding: 20px 40px;
 }
 .nav__list {
@@ -29,7 +29,7 @@
   display : flex;
   justify-content: center;
   align-items: center;
-  color : white;
+  color : peachpuff;
   font-weight : 600;
   position : absolute;
   left : 15px;
