--- a/css/screens/more.css
+++ b/css/screens/more.css
@@ -10,21 +10,18 @@
   margin-bottom: 30px;
 }
 
-.more-suggestions__icons {
-  display: flex;
-}
-
 .more-suggestions__icon {
   margin-right: 30px;
   display: flex;
   flex-direction: column;
   align-items: center;
+  color : peach;
 }
 
 .more-suggestions__icon-image {
   width: 60px;
   height: 60px;
-  background-color: var(--peach);
+  background-color: peach;
   border-radius: 10px;
   display: flex;
   justify-content: center;
