--- a/css/screens/more.css
+++ b/css/screens/more.css
@@ -10,6 +10,10 @@
   margin-bottom: 30px;
 }
 
+.more-suggestions__icons {
+  display: flex;
+}
+
 .more-suggestions__icon {
   margin-right: 30px;
   display: flex;
@@ -20,7 +24,7 @@
 .more-suggestions__icon-image {
   width: 60px;
   height: 60px;
-  background-color: peach;
+  background-color: var(--peach);
   border-radius: 10px;
   display: flex;
   justify-content: center;
