--- a/css/components/nav-bar.css
+++ b/css/components/nav-bar.css
@@ -1,6 +1,8 @@
 .nav {
+  position : fixed;
   background-color: peachpuff;
-  padding: 15px 40px;
+  padding: 20px 50px;
+  border-top : 1px solid rgba(121,121,121,0.3);
 }
 .nav__list {
   display: flex;
