--- a/css/components/nav-bar.css
+++ b/css/components/nav-bar.css
@@ -1,5 +1,6 @@
 .nav {
   position : fixed;
+  bottom : 0;
   background-color: peachpuff;
   padding: 20px 50px;
   border-top : 1px solid rgba(121,121,121,0.3);
