--- a/css/components/nav-bar.css
+++ b/css/components/nav-bar.css
@@ -2,7 +2,9 @@
   position : fixed;
   bottom : 0;
   background-color: peachpuff;
+  width : 100%;
   padding: 20px 50px;
+  box-sizing : border-box;
   border-top : 1px solid rgba(121,121,121,0.3);
 }
 .nav__list {
