--- a/css/components/user-component.css
+++ b/css/components/user-component.css
@@ -12,6 +12,7 @@
   height: 70px;
   border-radius: 30px;
   margin-right: 20px;
+  align-items : center;
 }
 .user-component__title {
   font-weight: 600;
@@ -25,12 +26,16 @@
 .user-component__avatar--xl {
   width: 80px;
   height: 80px;
+  align-items : center;
+
 }
 
 .user-component__avatar--sm {
   width: 60px;
   height: 60px;
   border-radius: 25px;
+  align-items : center;
+
 }
 
 .user-component__title--not-bold {
