--- a/css/components/user-component.css
+++ b/css/components/user-component.css
@@ -26,16 +26,16 @@
 .user-component__avatar--xl {
   width: 80px;
   height: 80px;
+  margin-right : 20px;
   align-items : center;
-
 }
 
 .user-component__avatar--sm {
   width: 60px;
   height: 60px;
-  border-radius: 25px;
+  border-radius: 25px;  
+  margin-right : 20px;
   align-items : center;
-
 }
 
 .user-component__title--not-bold {
