--- a/css/screens/more.css
+++ b/css/screens/more.css
@@ -24,7 +24,7 @@
 .more-suggestions__icon-image {
   width: 60px;
   height: 60px;
-  background-color: var(--peach);
+  background-color: var(--yellow);
   border-radius: 10px;
   display: flex;
   justify-content: center;
@@ -36,3 +36,4 @@
   font-size: 32px;
   color: white;
 }
+
