--- a/css/variables.css
+++ b/css/variables.css
@@ -1,5 +1,5 @@
 :root {
   --peach: peachpuff;
   --horizontal-space : 25px;
-  --main-border : 10px;
+  --main-border: 1px solid rgba(0, 0, 0, 0.2);
 }
