--- a/css/screens/chat.css
+++ b/css/screens/chat.css
@@ -42,6 +42,21 @@
   border-radius: 25px;
   margin-bottom: 25px;
 }
+
+.message-row {
+  transform: translateX(-30px);
+  opacity: 0;
+  animation: fadeLeft 1s ease-in-out forwards;
+}
+
+.message-row--own {
+  transform: translateX(-30px);
+  opacity: 0;
+  animation: fadeRight 1s ease-in-out forwards;
+  animation-delay: 0.7s;
+}
+
+
 .message-row {
   width: 100%;
   display: flex;
@@ -53,9 +68,9 @@
   border-radius: 50%;
   margin-right: 10px;
 }
+
 .message__author {
-  font-size: 14px;
-  margin-bottom: 7px;
+  margin-bottom: 5px;
   display: block;
 }
 .message__info {
@@ -70,20 +85,14 @@
   border-top-left-radius: 0px;
   margin-right: 5px;
 }
-.message__time{
-  opacity: 0.8;
-  font-size: 11px;
-  z-index: -1;
-}
+.message__time,
 .message__author {
+  opacity: 0.8;
   font-size: 14px;
-  margin-bottom: 7px;
-  display: block;
 }
 .message-row--own {
   justify-content: flex-end;
 }
-
 .message-row--own .message__bubble {
   background-color: var(--peach);
   border-top-right-radius: 0px;
