--- a/css/screens/chat.css
+++ b/css/screens/chat.css
@@ -2,10 +2,9 @@
   background-color: #abc1d1;
   height: 500vh;
 }
-
 #chat-screen .alt-header,
 #chat-screen .status-bar {
-  top: 0; 
+  top: 0;
   position: fixed;
   width: 100%;
   background-color: #abc1d1;
@@ -15,137 +14,91 @@
   z-index: 2;
 }
 #chat-screen .alt-header {
-  top: 15px;
+  top: 20px;
+  z-index: 1;
 }
-
-@keyframes fadeLeft {
-  0% {
+@keyframes fadeIn{
+  from{
+    transform: translateY(-10px);
     opacity: 0;
+  }
+  to{
     transform: none;
-  }
-  50% {
-    opacity: 0;
-    transform: translateX(-30px);
-  }
-  100% {
-    opacity: 1;
-    transform: none;
+    opacity :1;
   }
 }
-
-@keyframes fadeRight {
-  0% {
-    opacity: 0;
-    transform: none;
-  }
-  50% {
-    opacity: 0;
-    transform: translateX(30px);
-  }
-  100% {
-    opacity: 1;
-    transform: none;
-  }
-}
-
-.message-row-you {
-  transform: translateX(-30px);
-  opacity: 0;
-  animation: fadeLeft 1s ease-in-out forwards;
-}
-
-.message-row--own {
-  transform: translateX(-30px);
-  opacity: 0;
-  animation: fadeRight 1s ease-in-out forwards;
-  animation-delay: 0.7s;
-}
-
-.message-row-you:last-child {
-  animation-delay: 1.4s;
-}
-
 .main-chat {
-  margin-top: 70px;
-  display: flex;
+  margin-top: 180px;
+  display: none;
   flex-direction: column;
   align-items: center;
+  animation: fadeIn 0.8s linear;
 }
-
 .chat__timestamp {
-  color: #fff;
+  color: white;
   background-color: #92a4b2;
-  padding: 9px 16px;
-  border-radius: 20px;
-  font-size: 12px;
+  padding: 15px;
+  font-size: 14px;
+  border-radius: 25px;
   margin-bottom: 25px;
 }
-
 .message-row {
   width: 100%;
   display: flex;
   margin-bottom: 25px;
 }
-
 .message-row img {
-  width: 55px;
-  height: 55px;
-  border-radius: 21px;
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
   margin-right: 10px;
 }
-
 .message__author {
-  font-size: 14px;
-  margin-bottom: 7px;
+  margin-bottom: 5px;
   display: block;
 }
-
 .message__info {
   display: flex;
   align-items: flex-end;
 }
-
 .message__bubble {
   background-color: white;
-  padding: 10px 12px;
-  font-size: 17px;
+  padding: 13px;
+  font-size: 18px;
   border-radius: 15px;
   border-top-left-radius: 0px;
-  margin-right: 4px;
+  margin-right: 5px;
 }
-
-.message__time {
+.message__time,
+.message__author {
   opacity: 0.8;
-  font-size: 11px;
-  z-index: -1;
+  font-size: 14px;
 }
-
 .message-row--own {
   justify-content: flex-end;
 }
-
 .message-row--own .message__bubble {
-  background-color: var(--yellow);
-  border-top-right-radius: 0;
+  background-color: var(--peach);
+  border-top-right-radius: 0px;
   border-top-left-radius: 15px;
-  margin-right: 0;
-  margin-left: 4px;
+  margin-right: 0px;
+  margin-left: 5px;
 }
-
 .message-row--own .message__info {
   flex-direction: row-reverse;
 }
+
 .reply {
   position: fixed;
   bottom: 0;
   width: 100%;
-  background-color: #fff;
+  background-color: white;
   display: flex;
   justify-content: space-between;
-  align-items: center;
   padding: 5px 25px;
   box-sizing: border-box;
-  transition: all 0.3s ease-in-out;
+  align-items: center;
+  transition :all 0.3s ease-in-out; 
 }
 
 .reply .reply__column:first-child {
@@ -161,62 +114,61 @@
 }
 
 .reply input {
-  padding: 10px;
+  padding: 14px;
   width: 100%;
   border: var(--main-border);
-  border-radius: 20px;
-  transition: transform 0.3s ease-in-out;
+  border-radius: 25px;
+  box-sizing: border-box;
+  transition: all 0.3s ease-in-out;
 }
 
 .reply__column:last-child > i,
 .reply__column:last-child button {
   position: absolute;
-  right: -18px;
-  top: 4px;
+  right: 3px;
+  top: 3px;
 }
 
 .reply__column:last-child > i {
-  right: 19px;
-  top: 12.5px;
+  right: 50px;
+  top: 15px;
 }
 
 .reply__column button {
   background-color: var(--peach);
   border: none;
-  width: 30px;
-  height: 30px;
+  width: 40px;
+  height: 40px;
   border-radius: 50%;
 }
 
 .reply__column button i {
   opacity: 1;
 }
-
-.reply__column button:hover,
 .reply__column button:focus,
 .reply__column button:active {
-  cursor: pointer;
   outline: none;
 }
-
-.reply .reply__column:first-child,
-.reply .fa-smile-beam,
+.reply.reply__column:first-child,
+.reply.fa-smile-wink,
 .reply button {
-  transition: opacity 0.3s ease-in-out;
+transition : opacity 0.3 ease-in-out;
 }
 
-.reply:focus-within .reply__column:first-child,
-.reply:focus-within .fa-smile-beam,
+.reply:focus-within .reply__column:first-child {
+  opacity:0;
+  visibility:hidden;
+}
+.reply:focus-within.fa-smile-wink,
 .reply:focus-within button {
   opacity: 0;
 }
 
-.reply input:focus {
-  width: 90vw;
-  transform: translateX(-13%) translateY(-80px);
-  outline: none;
+.reply input:focus{
+  width:98vw;
+  transform:translateX(-13%) translateY(-80px);
 }
 
-.reply:focus-within {
-  transform: translateY(80px);
+.reply:focus-within{
+  transform:translateY(80px);
 }
