--- a/css/screens/login.css
+++ b/css/screens/login.css
@@ -1,8 +1,30 @@
-#login-form{
+
+
+.welcome-header { 
+position: sticky; 
+margin: 0 0 90px 0px; 
+padding-top: 90px;
+text-align: center; 
+display: flex; 
+flex-direction: column; 
+align-items: center;} 
+
+
+.welcome-header__title { 
+margin-bottom: 40px;
+font-size: 25px; 
+font-weight: 500;} 
+
+.welcome-header__text { 
+width: 55%; 
+opacity: 0.7;}
+
+  #login-form{
     display: flex;
     flex-direction : column;
     margin: 0px 30px;
   }
+
   #login-form input{
     border :none;
     padding: 15px 0px;
