--- a/css/screens/chat.css
+++ b/css/screens/chat.css
@@ -47,20 +47,17 @@
   transform: translateX(-30px);
   opacity: 0;
   animation: fadeLeft 1s ease-in-out forwards;
+  width: 100%;
+  display: flex;
+  margin-bottom: 25px;
 }
 
-.message-row--own {
+.message-row--own{
   transform: translateX(-30px);
   opacity: 0;
   animation: fadeRight 1s ease-in-out forwards;
   animation-delay: 0.7s;
-}
-
-
-.message-row {
-  width: 100%;
-  display: flex;
-  margin-bottom: 25px;
+  justify-content: flex-end;
 }
 .message-row img {
   width: 50px;
@@ -81,16 +78,18 @@
   border-top-left-radius: 0px;
   margin-right: 5px;
 }
-.message__time,
+.message__time {
+  opacity: 0.8;
+  font-size: 11px;
+  z-index: -1;
+}
 .message__author {
   opacity: 0.8;
   font-size: 14px;
   margin-bottom : 10px;
   display : block;
 }
-.message-row--own {
-  justify-content: flex-end;
-}
+
 .message-row--own .message__bubble {
   background-color: var(--peach);
   border-top-right-radius: 0px;
