--- a/css/screens/chat.css
+++ b/css/screens/chat.css
@@ -32,8 +32,7 @@
   display: none;
   flex-direction: column;
   align-items: center;
-  animation: fadeIn 0.8s linear;
-}
+ }
 .chat__timestamp {
   color: white;
   background-color: #92a4b2;
@@ -42,10 +41,19 @@
   border-radius: 25px;
   margin-bottom: 25px;
 }
+
 .message-row {
+  transform: translateX(-30px);
+  opacity: 0;
   width: 100%;
   display: flex;
   margin-bottom: 25px;
+}
+
+.message-row--own{
+  transform: translateX(-30px);
+  opacity: 0;
+  justify-content: flex-end;
 }
 .message-row img {
   width: 50px;
@@ -53,10 +61,7 @@
   border-radius: 50%;
   margin-right: 10px;
 }
-.message__author {
-  margin-bottom: 5px;
-  display: block;
-}
+
 .message__info {
   display: flex;
   align-items: flex-end;
@@ -69,14 +74,18 @@
   border-top-left-radius: 0px;
   margin-right: 5px;
 }
-.message__time,
+.message__time {
+  opacity: 0.8;
+  font-size: 11px;
+  z-index: -1;
+}
 .message__author {
   opacity: 0.8;
   font-size: 14px;
+  margin-bottom : 10px;
+  display : block;
 }
-.message-row--own {
-  justify-content: flex-end;
-}
+
 .message-row--own .message__bubble {
   background-color: var(--peach);
   border-top-right-radius: 0px;
