--- a/css/screens/chat.css
+++ b/css/screens/chat.css
@@ -14,8 +14,7 @@
   z-index: 2;
 }
 #chat-screen .alt-header {
-  top: 20px;
-  z-index: 1;
+  top: 15px;
 }
 @keyframes fadeLeft{
   0% {
@@ -52,6 +51,7 @@
   flex-direction: column;
   align-items: center;
  }
+
 .chat__timestamp {
   color: #fff;
   background-color: #92a4b2;
@@ -91,6 +91,7 @@ margin-bottom : 25px;
   display: flex;
   align-items: flex-end;
 }
+
 .message__bubble {
   background-color: white;
   padding: 10px 12px;
@@ -112,9 +113,9 @@ margin-bottom : 25px;
 
 .message-row--own .message__bubble {
   background-color: var(--peach);
-  border-top-right-radius: 0px;
+  border-top-right-radius: 0;
   border-top-left-radius: 15px;
-  margin-right: 0px;
+  margin-right: 0;
   margin-left: 4px;
 }
 .message-row--own .message__info {
