--- a/css/screens/chat.css
+++ b/css/screens/chat.css
@@ -88,32 +88,31 @@
   margin-right :10px;
 }
 .message__author {
-  font-size :14px;
-  margin-bottom : 7px;
+  margin-bottom : 5px;
   display : block;
 }
-
 .message__info {
   display: flex;
   align-items: flex-end;
   margin-bottom: 7px;
 }
-
 .message__bubble {
   background-color: white;
-  padding: 10px 12px;
+  padding: 8px 13px;
   font-size: 18px;
   border-radius: 15px;
   border-top-left-radius: 0px;
   margin-right : 5px;
 }
-
 .message__time {
   opacity: 0.8;
   font-size: 11px;
   z-index: -1;
 }
-
+.message__author {
+  opacity : 0.8;
+  font-size : 13px;
+}
 .message-row--own {
  justify-content: flex-end;
 }
