--- a/css/screens/chat.css
+++ b/css/screens/chat.css
@@ -35,7 +35,6 @@
   margin-top: 180px;
   display: flex;
   flex-direction: column;
-  align-items: center;
   animation : fadeIn 0.8s linear;
  }
 
@@ -46,6 +45,8 @@
   font-size: 14px;
   border-radius: 20px;
   margin-bottom: 25px;
+  align-items: center;
+
 }
 
 .message--row {
@@ -69,6 +70,7 @@
 .message__info {
   display: flex;
   align-items: flex-end;
+  margin-top : 10px;
 }
 
 .message__bubble {
