--- a/css/components/user-component.css
+++ b/css/components/user-component.css
@@ -23,6 +23,17 @@
   font-size: 17px;
   color: rgba(0, 0, 0, 0.5);
 }
+.user-component__title2 {
+  margin-left : 20px;
+  font-weight: 600;
+  font-size: 22px;
+}
+.user-component__subtitle {
+  margin-left : 20px;
+  margin-top: 8px;
+  font-size: 17px;
+  color: rgba(0, 0, 0, 0.5);
+}
 .user-component__avatar--xl {
   width: 80px;
   height: 80px;
