--- a/css/screens/chat.css
+++ b/css/screens/chat.css
@@ -54,7 +54,7 @@
 .message-row img {
   width: 50px;
   height: 50px;
-  border-radius: 50%;
+  border-radius: 20px;
   margin-right: 10px;
 }
 .message__author {
