--- a/css/screens/chat.css
+++ b/css/screens/chat.css
@@ -54,8 +54,9 @@
 .message-row img {
   width: 50px;
   height: 50px;
-  border-radius: 20px;
+  border-radius: 50%;
   margin-right: 10px;
+  display: fixed;
 }
 .message__author {
   margin-bottom: 5px;
