--- a/css/screens/more.css
+++ b/css/screens/more.css
@@ -24,7 +24,7 @@
 .more-suggestions__icon-image {
   width: 60px;
   height: 60px;
-  background-color: var(--peach);
+  background-color: var(--peach2);
   border-radius: 10px;
   display: flex;
   justify-content: center;
@@ -34,6 +34,6 @@
 
 .more-suggestions__icon-image i {
   font-size: 32px;
-  color: white;
+  color: var(--peach);
 }
 
