--- a/css/screens/more.css
+++ b/css/screens/more.css
@@ -24,7 +24,7 @@
 .more-suggestions__icon-image {
   width: 60px;
   height: 60px;
-  background-color: pink;
+  background-color: #fae;
   border-radius: 10px;
   display: flex;
   justify-content: center;
