--- a/css/variables.css
+++ b/css/variables.css
@@ -1,6 +1,6 @@
 :root {
   --peach: peachpuff;
-  --peach2 : peach;
+  --peach2 : #fae;
   --horizontal-space : 25px;
   --main-border: 1px solid rgba(0, 0, 0, 0.2);
 }
