--- a/css/screens/friends.css
+++ b/css/screens/friends.css
@@ -41,6 +41,7 @@
 
 #splash-screen {
   background-color: var(--peach2);
+  color : var(--peach);
   position: absolute;
   height: 100vh;
   width: 100vw;
